Some text answers improved

--- a/A1_P1.ipynb
+++ b/A1_P1.ipynb
@@ -8,15 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "### Imports"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -193,7 +184,56 @@
     "        return x\n",
     "\n",
     "\n",
-    "def train(model, train_loader, optimizer, scheduler, loss_func, epochs, device, **kwargs):\n",
+    "def train_c(model, train_loader, optimizer, loss_func, epochs, device, **kwargs):\n",
+    "\n",
+    "    num_epochs = kwargs.get('num_epochs', epochs)\n",
+    "    loss_fn = kwargs.get('loss_fn', loss_func)\n",
+    "    device = kwargs.get('device', device)\n",
+    "\n",
+    "    train_loss_hist, train_acc_hist = [], []\n",
+    "    for epoch in range(num_epochs):\n",
+    "        print(f'Epoch {epoch + 1}/{num_epochs}')\n",
+    "\n",
+    "        print('Training phase...')\n",
+    "        model.train()\n",
+    "        train_loss = 0.\n",
+    "        total = 0.\n",
+    "        correct = 0.\n",
+    "        pbar = tqdm(enumerate(train_loader), total = len(train_loader))\n",
+    "\n",
+    "        for batch_idx, (data, target) in pbar:\n",
+    "            data = data.to(device)\n",
+    "            target = target.to(device)\n",
+    "            model.zero_grad()\n",
+    "            output = model(data)\n",
+    "            loss = loss_fn(output, target)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            train_loss += loss.item()\n",
+    "\n",
+    "            _, predicted = torch.max(output.data, 1)\n",
+    "            total += target.size(0)\n",
+    "            correct += (predicted == target).sum().item()\n",
+    "\n",
+    "            pbar.set_description(f'Loss = {loss:.4f}  |  Accuracy = {100 * correct / total:.2f}% | Batch ID = {batch_idx + 1} ')\n",
+    "\n",
+    "        train_loss /= len(train_loader)\n",
+    "        train_accuracy = 100 * correct / total\n",
+    "        print(f'Training Cross-Entropy Loss = {train_loss:.4f}')\n",
+    "        print(f'Training Accuracy = {train_accuracy:.2f}%')\n",
+    "        print()\n",
+    "\n",
+    "        train_loss_hist.append(train_loss)\n",
+    "        train_acc_hist.append(train_accuracy)\n",
+    "\n",
+    "    print(f\"Cross-Entropy on training set:  {train_loss_hist[-1]:.4f}\")\n",
+    "    print(f\"Accuracy on training set:       {train_acc_hist[-1]:.2f}%\")\n",
+    "\n",
+    "    return train_loss_hist, train_acc_hist\n",
+    "\n",
+    "\n",
+    "def train_d(model, train_loader, optimizer, scheduler, loss_func, epochs, device, **kwargs):\n",
     "\n",
     "    num_epochs = kwargs.get('num_epochs', epochs)\n",
     "    loss_fn = kwargs.get('loss_fn', loss_func)\n",
@@ -283,7 +323,10 @@
    "id": "639d6e4b",
    "metadata": {},
    "source": [
-    "### Exercise 1. (A)"
+    "## Exercise 1, a)\n",
+    "\n",
+    "### References\n",
+    " - https://www.analyticsvidhya.com/blog/2023/01/gradient-descent-vs-backpropagation-whats-the-difference/#:~:text=To%20put%20it%20plainly%2C%20gradient,gradient%20descent%20relies%20on%20backpropagation."
    ]
   },
   {
@@ -293,27 +336,11 @@
    "source": [
     "**Backpropagation** and **gradient descent** are like a dynamic duo in training deep neural networks (DNNs).\n",
     "\n",
-    "**Backpropagation** is the process of updating the model's weights by calculating the gradient of the loss function with respect to the weights. It's all about figuring out how much each weight contributed to the error, layer by layer, starting from the output layer and working backward through the network. This info helps adjust the weights to minimize the error in future predictions.\n",
+    "**Backpropagation** is the process of computing the partial derivatives of the network's parameters with respect to the loss function, in a backward manner. It's all about figuring out how much each parameter contributed to the error, layer by layer, starting from the output layer and working backward through the network. For that, it's crucial to understand the computational graph and the dependencies of each component of the network, for example the activation values. This info helps adjust the network's parameters so to minimize its cost, info that is used for gradient descent.\n",
     "\n",
-    "Now, **gradient descent** is the optimization technique that works hand-in-hand with backpropagation. It's all about finding the minimum of the loss function. The gradient (derivative) of the loss with respect to the weights tells us the direction of the steepest increase. Gradient descent takes steps in the opposite direction to minimize the loss.\n",
+    "Now, **gradient descent** is the optimization technique that works hand-in-hand with backpropagation. It's all about finding the (local or global) minimum of the loss function. The gradient (derivative) of the loss with respect to the parameters tells us the direction of the steepest increase. Gradient descent takes steps in the opposite direction to minimize the loss. In order to control how fast or slow the network optimizes its parameters, a learning rate is used, being multiplied with the gradients, and because this is a minimization problem, the old parameters are subtracted by the adjusted gradient of the respective parameters.\n",
     "\n",
-    "So, to sum it up, backpropagation fine-tunes the weights based on the error, and gradient descent guides this process by minimizing the error step by step. They team up to make our neural networks smarter!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3e5d18e",
-   "metadata": {},
-   "source": [
-    "#### References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37abdddb",
-   "metadata": {},
-   "source": [
-    " - https://www.analyticsvidhya.com/blog/2023/01/gradient-descent-vs-backpropagation-whats-the-difference/#:~:text=To%20put%20it%20plainly%2C%20gradient,gradient%20descent%20relies%20on%20backpropagation."
+    "So, to sum it up, backpropagation computes the gradients of the network's parameters, while gradient descent uses those gradients to minimize the loss function. They team up to make our neural networks smarter!"
    ]
   },
   {
@@ -321,10 +348,10 @@
    "id": "1cdbdc33",
    "metadata": {},
    "source": [
-    "### Exercise 1. (B)\n",
+    "## Exercise 1, b)\n",
     "\n",
-    "#### References\n",
-    "https://towardsdatascience.com/nothing-but-numpy-understanding-creating-binary-classification-neural-networks-with-e746423c8d5c"
+    "### References\n",
+    " - https://towardsdatascience.com/nothing-but-numpy-understanding-creating-binary-classification-neural-networks-with-e746423c8d5c"
    ]
   },
   {
@@ -450,17 +477,17 @@
    "metadata": {},
    "source": [
     "<h2>After updating your weights what do you observe? Explain why.</h2>\n",
-    "<p>After computing the loss and doing a backward pass, and given that all weights were initialized with the value 2, we can see that none of the weights changed. Tracing back the steps made, we can see that all partial derivatives with respect to all the weights have a value of 0, which corroborates the fact that none of the weight's values changed. These partial derivatives measure the weight's variation in order for the loss of the neural network to decrease. So, the question now becomes, why all partial derivatives with respect to all weights show that no variation in their values is required in order to decrease the loss? Well, that's because the loss is already at its minimum, which is zero. Looking at how the binary loss is computed, we see that both the expected value and predicted value are exactly the same value, one, meaning that our network predicted perfectly the target. So, this means that there's no more room for improvement, and that's why all partial derivatives with respect to the weights are zero, and as consequence, the weight matrices didn't change.</p>"
+    "<p>After computing the loss and doing a backward pass, and given that all weights were initialized with the value 0.2, we can see that all weights increased their values. Tracing back the steps made, we can see that all partial derivatives with respect to all the weights have negative values (different than zero), which corroborates the fact that the weight's values changed in an increasing manner. Because the optimizer implemented was SGD, the symmetric of the partial derivatives with respect to the weights are used, being multiplied by the learning rate. So, considering the weight W[1][1], which is the weight of the connection between the first input node and the first node in the first hidden layer, we can see that dL_dW[1][1] is equal to -0.1310, and because the learning rate is 0.2, the adjusted negative gradient is -(-0.1301 * 0.2), which is equal to 0.0262, and then the new W[1][1] is 0.2 + 0.0262, which is the value that appears in W_updated[1][1] (0.2262). So, the question now becomes, why all partial derivatives of the loss with respect to all weights show non-zero values? Well, that's because the loss different than zero. Looking at how the binary loss is computed, we see that the loss was computed as -log(a[3]) because the ground truth is 1, as the second component of the function cancels out because we get a product with zero. So, this means that there's still more room for improvement, and that's why all partial derivatives with respect to the weights are non-zero, and as consequence, the weight matrices changed, in order to approximate this loss to zero.</p>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1. (C)\n",
+    "## Exercise 1, c)\n",
     "\n",
     "#### References\n",
-    "https://medium.com/@aaysbt/fashion-mnist-data-training-using-pytorch-7f6ad71e96f4"
+    " - https://medium.com/@aaysbt/fashion-mnist-data-training-using-pytorch-7f6ad71e96f4"
    ]
   },
   {
@@ -555,8 +582,8 @@
     "trainset = torchvision.datasets.FashionMNIST(root = './data', train = True, download = True, transform = transform)\n",
     "testset = torchvision.datasets.FashionMNIST(root = './data', train = False, download = True, transform = transform)\n",
     "\n",
-    "TrainLoader = torch.utils.data.DataLoader(trainset, batch_size = 256, shuffle = True)\n",
-    "TestLoader = torch.utils.data.DataLoader(testset, batch_size = 256, shuffle = False)"
+    "TrainLoader = torch.utils.data.DataLoader(trainset, batch_size = 2048, shuffle = True)\n",
+    "TestLoader = torch.utils.data.DataLoader(testset, batch_size = 2048, shuffle = False)"
    ]
   },
   {
@@ -577,7 +604,7 @@
     "device = set_device()\n",
     "NeuralNetwork = NeuralNetwork_Exercise1_c().to(device)\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(NeuralNetwork.parameters(), lr = 0.01)"
+    "optimizer = torch.optim.SGD(NeuralNetwork.parameters(), lr = 0.01)"
    ]
   },
   {
@@ -1185,7 +1212,7 @@
     }
    ],
    "source": [
-    "train_loss_hist, train_acc_hist = train(NeuralNetwork, TrainLoader, optimizer, criterion, epochs = 32, device = device)"
+    "train_loss_hist, train_acc_hist = train_c(NeuralNetwork, TrainLoader, optimizer, criterion, epochs = 32, device = device)"
    ]
   },
   {
@@ -1219,15 +1246,35 @@
    "id": "9c9d6da6",
    "metadata": {},
    "source": [
-    "To improve the previous feedforward neural network for the Fashion-MNIST classification task, we can make the following changes:\n",
+    "To improve the previous feedforward neural network for the Fashion-MNIST classification task, we implemented the following changes:\n",
     "\n",
-    "**Increase Network Complexity**: We can add more hidden layers and neurons to increase the network's capacity to learn complex patterns in the data.\n",
+    "**Use a Learning Rate Scheduler**: One of the most, if not the most important hyper-parameter in a neural network is the learning rate. This choice is very important, and in fact affects a lot the results given by the network. The problem with a constant learning rate is that it doesn't adapt to the training stage, because in the beginning the learning rate can be higher because the network still has a lot to learn, and therefore the updates made by the optimizer can be bigger; however, when the network is converging, a smaller learning rate is better suited because larger steps will make the network wand around the local minimum, but never reaches it. To deal with this, we applied a learning rate scheduler, which changes the learning rate's value during training, adapting it depending on the training stage.\n",
     "\n",
-    "**Use Different Activation Function**: Instead of using ReLU (Rectified Linear Unit) activation, we can try a different activation function like Leaky ReLU, which might help with training.\n",
+    "**Use Different Optimizer**: Previously we used Stochastic Gradient Descent as our optimizer, however there're more algorithms that, theoretically, converge even faster than a simple SDG. Some examples are Root Meas Square propagation (RMSprop) and Adaptive Moment (Adam), or even SGD with momentum (Nesterov or not). These algorithms are more interesting because they use exponential smoothing to make the gradients focus on pointing more towards the local minimum. This, combined with a good learning rate trategy can make a model very powerfull!\n",
     "\n",
-    "**Regularization Techniques**: To prevent overfitting, we can add dropout layers and L2 regularization to the network.\n",
+    "**Use Different Activation Function**: We tested several activation function, for example ReLU, Leaky ReLU, and Sigmoid, in order to check how different activation functions impact not only the training loss, but also how well certain activation functions can help the network generalize better.\n",
     "\n",
-    "**Batch Normalization**: Applying batch normalization can help stabilize and speed up training."
+    "**Variance vs Bias**: Although activation functions can improve the results, we wanted to reduce overfitting as much as possible, while also keeping the network from underfitting, and for that we used two techniques specifically created to deal with overfitting, which are regularization techniques and dropout layers.\n",
+    "\n",
+    "**Batch Normalization**: It's usual to normalize the input data before training or testing a neural network, so that the data's different scales don't affect the importance the network gives to certain inputs in detriment of others that might be as much, or even more important. Therefore, it also makes sense to normalize the values computed by the network during training. So, by applying batch normalization we can help the network stabilize and converge faster to a local minimum.\n",
+    "\n",
+    "**Change Epoch Number and Mini-Batch Size**: Another two important hyper-paramters are epochs and the mini-batch size. The size of the mini-batch affects the training time of the network, but also enables the optimizer to be applied more or less times, per epoch, and this can make the model learn more in less epochs. The number of epochs is also important because after a certain ammount of epochs the model might still be learning, so in order for it to converge more epochs might be required.\n",
+    "\n",
+    "**Increase Network Complexity**: We can add more hidden layers and neurons to increase the network's capacity to learn complex patterns in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
+    "trainset = torchvision.datasets.FashionMNIST(root = './data', train = True, download = True, transform = transform)\n",
+    "testset = torchvision.datasets.FashionMNIST(root = './data', train = False, download = True, transform = transform)\n",
+    "\n",
+    "TrainLoader = torch.utils.data.DataLoader(trainset, batch_size = 256, shuffle = True)\n",
+    "TestLoader = torch.utils.data.DataLoader(testset, batch_size = 256, shuffle = False)"
    ]
   },
   {
@@ -2491,7 +2538,7 @@
     }
    ],
    "source": [
-    "train_loss_hist, train_acc_hist = train(NeuralNetwork_complex, TrainLoader, optimizer, scheduler, criterion, epochs = 64, device = device)"
+    "train_loss_hist, train_acc_hist = train_d(NeuralNetwork_complex, TrainLoader, optimizer, scheduler, criterion, epochs = 64, device = device)"
    ]
   },
   {
@@ -2542,7 +2589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1. (E)"
+    "## Exercise 1, e)"
    ]
   },
   {
@@ -2553,15 +2600,6 @@
     "  - **Generalization:** Network A generalize better on the test data, because with more hidden layers the Neural Network is forced not to memorize the data, and learn more efficient representations of the input data instead.\n",
     "   - **Feature Extraction**: Because of the number of hidden layers, the 3x10 architecture has a greater opportunity to learn/extract more complex patterns in the data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
