Image added to teacher forcing explanation

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -547,6 +547,10 @@
     "<h2>Investigate what teacher forcing is and explain it in your own words.</h2>\n",
     "<p>Teacher forcing is a technique that can be implemented in an autoregressive RNN in order to make it converge much faster! In a vanilla autoregressive RNN, where we want to make predictions many time steps to the future, what happens is that the prediction for a certain time step is used as input to predict for the next time step. This means that a vanilla autoregressive RNN uses its own predictions to make more predictions further into the future. That being said, because a prediction never hits the mark perfectly, inaccurate data is passed to the next time step, for all time steps in the future to which we want to predict. This makes an autoregressive model learn slower because it needs to adjust its ealier predictions first, in order to make good predictions further to the future, and for that many forward and backward passes are required. So, in order to help the autoregressive RNN learn faster and with more accurate data, teacher forcing is used, which just means that we use the ground truth from the previous time step as input to the following time step, instead of the prediction from the previous time step.\n",
     "\n",
+    "In this exercise, we have an autoregressive RNN, just like the one on the image bellow, where first we have the warm-up phase in which all the network's inputs are given first, without any predictions produced; after this phase the network's outputs are produced based on the previous outputs, but to start, the input to the first output is the last input given to the model. So, looking at this architecture, we can say that teacher forcing consists of replacing the model's outputs by the labels as the inputs; for example, for t = 25, instead of giving as input the prediction from t = 24 the model will give the label for t = 24.\n",
+    "\n",
+    "![Autoregressive RNN](https://www.tensorflow.org/static/tutorials/structured_data/images/multistep_autoregressive.png \"Autoregressive RNN\")\n",
+    "\n",
     "References: https://towardsdatascience.com/what-is-teacher-forcing-3da6217fed1c</p>\n"
    ]
   },
