Load weather data uncommented

--- a/A1_P2.ipynb
+++ b/A1_P2.ipynb
@@ -578,16 +578,14 @@
     }
    ],
    "source": [
-    "#### THIS IS ONLY FOR THE JUPYTER NOTEBOOK WE'LL SUBMIT\n",
-    "\n",
-    "'''# Download the data\n",
+    "# Download the data\n",
     "import requests\n",
     "import zipfile\n",
     "response = requests.get('https://storage.googleapis.com/tensorflow/tf-keras-datasets/jena_climate_2009_2016.csv.zip')\n",
     "open('weather_dataset.zip', 'wb').write(response.content)\n",
     "with zipfile.ZipFile('weather_dataset.zip', 'r') as zip_ref:\n",
     "    zip_ref.extractall('./')\n",
-    "df = pd.read_csv('jena_climate_2009_2016.csv')'''"
+    "df = pd.read_csv('jena_climate_2009_2016.csv')"
    ]
   },
   {
@@ -596,8 +594,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download the data\n",
-    "df = pd.read_csv('data/jena_climate_2009_2016.csv')"
+    "# Download the data locally\n",
+    "# df = pd.read_csv('data/jena_climate_2009_2016.csv')"
    ]
   },
   {
